--- a/apps/travel/templates/travel/index.html
+++ b/apps/travel/templates/travel/index.html
@@ -45,6 +45,7 @@
 
       <thead>
         <tr>
+          <th>Name</th>
           <th>Destination</th>
           <th>Travel Start Date</th>
           <th>Travel End Date</th>
@@ -57,6 +58,7 @@
         {% for trip in trips %}
         {% if trip.maker != user and user not in trip.joining.all %}
         <tr>
+          <td>{{trip.maker.first_name}}</td>
           <td><a href="{% url 'travel:trip' id=trip.id %}">{{trip.destination}}</a></td>
           <td>{{trip.date_start}}</td>
           <td>{{trip.date_end}}</td>
